# setq

./: CMakeLists.txt  main.cpp  notes.txt  reader.cpp  seqt.cpp  splay.cpp
include/: bin.hpp  char32_input_iterator.hpp  manual.hpp  mat.hpp  partition.hpp  seqt.hpp  splay.hpp  test.hpp  utf8_reader.hpp
scripts/: set_counter_collect.sh
src/: bit_seqt.cpp  partition.cpp  seqt.cpp  seqt_node.cpp  set_counter.cpp  symbol_workspace.cpp
test/: test_manual.cpp  test_partition.cpp  test_seqt.cpp  test_splay.cpp
text/: test_ab.txt
workbooks/: partition.ipynb
